--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -7,11 +7,13 @@
     <title>Class and ID Selectors</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="oddelements">Number 1 - I'm a class!</p>
+    <div class="secondelement">Number 2 - I'm one ID.</div>
+    <p class="oddelements" font-size="24px">Number 3 - I'm a class, but cooler!</p>
+    <div class="fourthelement">Number 4 - I'm another ID.</div>
+    <p class="oddelements">Number 5 - I'm a class!</p>
   </body>
+
 </html>
