--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -7,8 +7,10 @@
     <title>Grouping Selectors</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+    <button class="first" class="both">Click Me!</button>
+    <button class="second" class="both">No, Click Me!</button>
+
   </body>
 </html>
